# recommendations-models-sasrec

./: LICENSE  README.md  docker-compose.yml  poetry.toml  pyproject.toml
docker/: Dockerfile
docker-base/: Dockerfile
docker/code/: hyperparams.py  nginx.conf  popularity_metrics_sasrec.py  popularity_sampling_sasrec.py  predictor.py  preprocess  sasrec_common.py  sasrec_data.py  sasrec_inference.py  sasrec_model.py  serve  start_hyperparameter_tuning_job.py  train  tron_sasrec.py  wsgi.py
sagemaker-pipeline/: create_update_pipeline.py  dummy_code_file.py  pipeline.py
testing/: test_pop_sampling_sasrec.py  test_pop_sasrec.py
